--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnB clone</title>
+    <title>Web_static</title>
 </head>
+<body style="margin: 0px;padding: 0px;">
+    <header style="height: 70px; width: 100%; background-color: #FF0000;">
 
-<body style="margin:0; padding: 0">
-    <header style="background-color: #FF0000; height: 70px; width: 100%"></header>
-
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; left: 0;bottom: 0">
-        <p style="text-align: center; padding: 6px;">Holberton School</p>
+    </header>
+    <footer style="height: 60px; width: 100%; background-color: #00FF00; text-align: center; position:fixed; bottom: 0px;">
+        <p>Best School</p>
     </footer>
 </body>
-
 </html>
