--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/3-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
     <link rel="shortcut icon" href="images/hbnb.png" type="image/x-icon">
     <title>Web_static</title>
 </head>
@@ -13,6 +14,11 @@
     <header>
         <div class="logo"></div>
     </header>
+    <div class="container">
+        <section class="filters">
+            <button>Search</button>
+        </section>
+    </div>
     <footer>
         <p>Best School</p>
     </footer>
