--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="shortcut icon" href="images/hbnb.png" type="image/x-icon">
     <title>Web_static</title>
 </head>
@@ -21,14 +21,38 @@
             <div class="locations">
                 <h3>States</h3>
                 <h4>Lorem ipsum</h4>
+                <ul class="popover">
+                    <li>
+                        <h2>Delta:</h2>
+                        <ul>
+                            <li>Asaba</li>
+                            <li>Okpanam</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Anambra:</h2>
+                        <ul>
+                            <li>Onitsha</li>
+                            <li>Okija</li>
+                        </ul>
+                    </li>
+                </ul>
+
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Lorem ipsum dolor sit amet.</h4>
-            </div>
 
+                <ul class="popover">
+                    <li>Asaba</li>
+                    <li>Okpanam</li>
+                    <li>Onitsha</li>
+                    <li>Okija</li>
+                </ul>
+            </div>
             <button>Search</button>
         </section>
+
     </div>
     <footer>
         <p>Best School</p>
